1. 首次实现八卦二码频度预算算法； 2. 修改二码法钓叟选码算法bug; 3. 使用单组序列实现预测;

--- a/Welfare/Welfare.vcxproj
+++ b/Welfare/Welfare.vcxproj
@@ -121,6 +121,7 @@
     <ClInclude Include="CSelection.h" />
     <ClInclude Include="DlgProxy.h" />
     <ClInclude Include="Encode.h" />
+    <ClInclude Include="GossipFreq.h" />
     <ClInclude Include="PrePrintDlg.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
@@ -132,6 +133,7 @@
     <ClCompile Include="CListBox.cpp" />
     <ClCompile Include="DlgProxy.cpp" />
     <ClCompile Include="Encode.cpp" />
+    <ClCompile Include="GossipFreq.cpp" />
     <ClCompile Include="PrePrintDlg.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
